All interfaces are ready